# ChangeLog for dev-util/libconf
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/libconf/Attic/ChangeLog,v 1.34 2005/11/18 17:20:40 dams Exp $

*libconf-0.42.00 (18 Nov 2005)

  18 Nov 2005; Damien Krotkine <dams@gentoo.org> +libconf-0.42.00.ebuild:
  version bump : python, ruby, bash bindings, xml support

  30 Oct 2005; Jason Wever <weeve@gentoo.org> libconf-0.40.00.ebuild:
  Stable on SPARC.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> libconf-0.40.00.ebuild:
  Mark 0.40.00 stable on ia64

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> libconf-0.40.00.ebuild:
  Mark 0.40.00 stable on alpha

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> libconf-0.40.00.ebuild:
  Stable on ppc64

*libconf-0.40.00 (27 Aug 2005)

  27 Aug 2005; Damien Krotkine <dams@gentoo.org> +libconf-0.40.00.ebuild:
  major version bump

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> libconf-0.39.21.ebuild:
  stable on ia64

  12 Jul 2005; Simon Stelling <blubb@gentoo.org> libconf-0.39.21.ebuild:
  stable on amd64

*libconf-0.39.21 (20 Jun 2005)

  20 Jun 2005; <dams@gentoo.org> +libconf-0.39.21.ebuild:
  new version

  02 Jun 2005; <dams@gentoo.org> libconf-0.39.18.ebuild:
  marked stable on ppc64

*libconf-0.39.18 (02 Jun 2005)

  02 Jun 2005; <dams@gentoo.org> +libconf-0.39.18.ebuild:
  new version

*libconf-0.39.16 (08 May 2005)

  08 May 2005; <dams@gentoo.org> +libconf-0.39.16.ebuild:
  version bump

*libconf-0.39.15 (08 May 2005)

  08 May 2005; <dams@gentoo.org> +libconf-0.39.15.ebuild:
  version bump

*libconf-0.39.14 (07 May 2005)

  07 May 2005; <dams@gentoo.org> +libconf-0.39.14.ebuild:
  version bump

  01 Apr 2005; Aron Griffis <agriffis@gentoo.org> libconf-0.39.8.ebuild:
  stable on ia64

*libconf-0.39.13 (29 Mar 2005)

  29 Mar 2005; <dams@gentoo.org> +libconf-0.39.13.ebuild:
  version 0.39.13 : xml import/export, resolv template correction

*libconf-0.39.12 (21 Mar 2005)
