@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/libconf
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/libconf/Attic/ChangeLog,v 1.34 2005/11/18 17:20:40 dams Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/libconf/Attic/ChangeLog,v 1.35 2005/11/20 17:57:29 dams Exp $
+
+*libconf-0.42.00-r1 (20 Nov 2005)
+
+  20 Nov 2005; Damien Krotkine <dams@gentoo.org> +libconf-0.42.00-r1.ebuild:
+  removed stupid reference to wxwidgets
 
 *libconf-0.42.00 (18 Nov 2005)
 
